# Choosie

./: .gitignore  LICENSE  README.md  pyproject.toml  rename.ps1
choosie/: __init__.py
choosie/analytics/: __init__.py  leaderboard.py
choosie/core/: __init__.py  arena.py  battle.py  competitor.py
choosie/storage/: __init__.py  csv_store.py
choosie/ui/: __init__.py  app.py
examples/: quickstart.py
tests/: test_arena.py  test_competitor.py  test_csv_store.py  test_leaderboard.py
vibediff/: __init__.py
vibediff/analytics/: __init__.py  leaderboard.py
vibediff/core/: __init__.py  arena.py  battle.py  competitor.py
vibediff/storage/: __init__.py  csv_store.py
vibediff/ui/: __init__.py  app.py
